--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,5 +35,5 @@ jobs:
       - name: Archive build
         uses: actions/upload-artifact@v4
         with:
-          name: ios-simulator-build
-          path: build/ios/iphonesimulator
+          name: flutter-app
+          path: build/ios/ipa/*.ipa
