--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
         run: echo "scheme=$scheme" >> $GITHUB_OUTPUT
 
       - name: Build unsigned IPA
-        run: flutter build ipa --no-codesign --simulator
+        run: flutter build ios --simulator
 
       - name: List build output (debug)
         run: ls -R build/ios
