--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,6 +59,7 @@ jobs:
           if [ "${{ github.event.inputs.simulator }}" = "true" ]; then
             mkdir Payload
             cp -r build/ios/iphonesimulator/${{ env.scheme }}.app /${{ env.path }}
+            zip -r "${{ env.path }}.zip" "${{ env.path }}"
           else
             tar -cvf "${{ env.path }}" "build/ios/archive/Runner.xcarchive"
           fi
@@ -67,7 +68,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: ios-app
-          path: ${{ env.path }}
+          path: "${{ env.path }}.zip"
 
   package:
     name: Create fake-signed IPA
