--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,9 +57,8 @@ jobs:
       - name: Tar Build Artifact
         run: |
           if [ "${{ github.event.inputs.simulator }}" = "true" ]; then
-            mkdir Payload
-            cp -r build/ios/iphonesimulator "${{ env.path }}/"
-            zip -r "${{ env.path }}.zip" "${{ env.path }}"
+            cp -r build/ios/iphonesimulator App/
+            zip -r "${{ env.path }}.zip" App/
           else
             tar -cvf "${{ env.path }}" "build/ios/archive/Runner.xcarchive"
           fi
