--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
     env:
       scheme: Runner
       archive_path: build/ios/archive
-      path: App
+      path: "build.zip"
     outputs:
       scheme: ${{ steps.set_scheme.outputs.scheme }}
       archive_path: ${{ env.archive_path }}
@@ -57,9 +57,7 @@ jobs:
       - name: Tar Build Artifact
         run: |
           if [ "${{ github.event.inputs.simulator }}" = "true" ]; then
-            mkdir App
-            cp -r build/ios/iphonesimulator App/
-            zip -r "${{ env.path }}.zip" App/
+            zip -r "build.zip" build
           else
             tar -cvf "${{ env.path }}" "build/ios/archive/Runner.xcarchive"
           fi
@@ -68,7 +66,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: ios-app
-          path: "${{ env.path }}.zip"
+          path: ${{ env.path }}
 
   package:
     name: Create fake-signed IPA
