--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ on:
         description: Run simulator build
         type: boolean
         required: true
-        default: true
+        default: false
 
 jobs:
   build:
