--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -72,8 +72,19 @@ jobs:
       artifact: ${{ github.event.inputs.scheme }}.apk
     
     steps:
+      - name: Setup Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: '3.35.3'
+          channel: stable
+
+      - name: Get Flutter dependencies
+        run: flutter pub get
+
+
       - name: Build for android
         run: flutter build apk
+
 
       - name: Upload Android Build Artifact
         uses: actions/upload-artifact@v4
