--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ on:
 
 jobs:
   build-ios:
-    name: Build Flutter IPA (unsigned)
+    name: Build for iOS
     runs-on: macos-latest
 
     steps:
@@ -66,12 +66,14 @@ jobs:
           path: archive.xcarchive.tar
 
   build-android:
-    name: Build Flutter APK
+    name: Build for Android
     runs-on: ubuntu-latest
     outputs:
       artifact: ${{ github.event.inputs.scheme }}.apk
     
     steps:
+      - uses: actions/checkout@v3
+
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
@@ -81,10 +83,8 @@ jobs:
       - name: Get Flutter dependencies
         run: flutter pub get
 
-
       - name: Build for android
         run: flutter build apk
-
 
       - name: Upload Android Build Artifact
         uses: actions/upload-artifact@v4
@@ -94,7 +94,7 @@ jobs:
 
 
   package:
-    name: Create fake-signed IPA
+    name: Create IPA
     runs-on: macos-latest
     if: ${{ github.event.inputs.simulator == 'false' }}
     needs: [build-ios]
@@ -135,7 +135,7 @@ jobs:
           path: ${{ github.event.inputs.scheme }}.ipa
   
   release__nightly:
-    name: Nightly Release
+    name: Release
     permissions:
       contents: write
     if: inputs.release__nightly || github.event_name == 'push'
