--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ on:
       scheme:
         description: iOS Scheme to build
         type: string
-        required: false
+        required: true
         default: Runner
 
 jobs:
